# agents-openai-sdk-deep-research-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
core/: research_manager.py
research_agents/: email_agent.py
