[project]
name = "openai-sdk-deep-research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gradio>=6.14.0",
    "openai>=2.37.0",
    "openai-agents>=0.17.2",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "sendgrid>=6.12.5",
]
